--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
     "portal-vue": "^2.1.6",
+    "sweetalert2": "^9.3.6",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-sweetalert2": "^2.1.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
